--- a/rest-api.html
+++ b/rest-api.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="./rest-config.html">
 
 <dom-module is="rest-api">
   <script>
@@ -36,7 +37,12 @@
         this.resume();
       },
       handleUrlChanged: function() {
-        this.request();
+        this.url = this.url.replace(document.location, "");
+
+        // don't request till we are attached to the dom
+        if (this.parentElement) {
+          this.request();
+        }
       },
       handleDataChanged: function() {
         // console.log("data is changed", this.data, typeof this.data);
@@ -53,8 +59,30 @@
         if (this.cacheKey) {
           this.resume();
         }
-        this.request();
         window.addEventListener("online", this.handleNetwork.bind(this));
+      },
+
+      attached: function() {
+        this.request();
+      },
+
+      getConfig: function() {
+        try {
+          var config = null;
+          if (this.parentElement) {
+            if (this.parentElement.is == "rest-config") {
+              config = this.parentElement;
+            } else {
+              config = this.parentElement.querySelector("rest-config");
+            }
+          }
+          if (! config) {
+            config = document.querySelector("rest-config");
+          }
+        } catch(ex) {
+          console.error(ex);
+        }
+        return config;
       },
 
       /** pull the collection out of the data */
@@ -79,20 +107,61 @@
       /** get data saved in the cache */
       resume: function() {
         if (this.cacheKey && ! this.data) {
-          console.error("resuming", this.cacheKey);
           var stored = localStorage[this.cacheKey];
           if (stored) {
             try {
               this.data = this.parse(stored);
             } catch(ex) {
-              console.info("parse error, using fallback", ex);
               this.data = this.fallback;
             }
           } else {
-            console.info("no cache, using fallback");
             this.data = this.fallback;
           }
         }
+      },
+
+      /** sets up a request, but doesn't send it or serialize the data */
+      setupRequest: function(options) {
+        var request = new XMLHttpRequest();
+        var url = options.url;
+
+        if (! this.config) {
+          this.config = this.getConfig();
+        }
+
+        if (! /^http/.test(url)) {
+          if (this.config && this.config.server) {
+            url = this.config.server + url;
+          }
+        }
+        request.open(options.method || 'GET', url, true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+        if (options.data) {
+          request.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+        }
+        if (this.config && this.config.token) {
+          request.setRequestHeader(
+              'Authorization', 'Token ' + this.config.token);
+        }
+        return request
+      },
+
+      /** sends a request to the api endpoint */
+      fetch: function(options) {
+        return new Promise(function(resolve, reject) {
+          var request = this.setupRequest(options);
+          request.onload = function(data) {
+            resolve(request);
+          };
+          request.onerror = function() {
+            reject(request);
+          }
+          if (options.data) {
+            request.send(JSON.stringify(options.data));
+          } else {
+            request.send();
+          }
+        }.bind(this));
       },
 
       /** send a request to the api endpoint (url) */
@@ -101,10 +170,10 @@
           this.lastUrl = this.url;
           this.sending = true;
 
-          console.error("requesting", this.url);
-          var request = new XMLHttpRequest();
-          request.open('GET', this.url, true);
-          request.onload = function() {
+          return this.fetch({
+            method: "GET",
+            url: this.url
+          }).then(function(request) {
             if (request.status >= 200 && request.status < 400) {
               if (this.cacheKey) {
                 localStorage[this.cacheKey] = request.responseText;
@@ -121,14 +190,12 @@
               this.useFallback();
             }
             this.sending = false;
-          }.bind(this);
-          request.onerror = function() {
+          }.bind(this)).catch(function(request) {
             // There was a connection error of some sort
             this.sending = false;
             this.handleError(request.responseText);
             this.useFallback();
-          }.bind(this);
-          request.send();
+          }.bind(this));
         }
       },
 
@@ -145,17 +212,26 @@
         return navigator.onLine;
       },
 
+      addQueue: function(data) {
+        return new Promise(function(resolve, reject) {
+          data.resolve = resolve;
+          data.fail = reject;
+          this._queue.push(data);
+          this.processQueue();
+        }.bind(this));
+      },
+
       /** attempt to push local changes */
       processQueue: function() {
         if (this.isOnline() && this._queue.length > 0 && ! this._queueNext) {
           this._queueNext = this._queue.shift();
 
-          var request = new XMLHttpRequest();
-          request.open(this._queueNext.method, this.url + (this._queueNext.url || ""), true);
-          request.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+          var request = this.setupRequest({
+            method: this._queueNext.method,
+            url: this.url + (this._queueNext.url || "")
+          });
           request.onload = function() {
             clearTimeout(this._queueTimeout);
-            console.log("success");
             if (request.status == 200) {
               this._queueNext.resolve();
               this._queueNext = null;
@@ -188,11 +264,11 @@
         if (this._queueNext.attempts > 3) {
           // TODO: get better error messaging here
           this._queueNext.fail(e);
-          this._queueNext = null;
         } else {
           // do another attempt
           this._queue.push(this._queueNext);
         }
+        this._queueNext = null;
         clearTimeout(this._queueTimeout);
         console.error("failed to send queue, pausing for a bit");
         // TODO: make a variable for this timeout
@@ -223,46 +299,35 @@
 
       /** posts a new model to the api */
       add: function(model) {
-        return new Promise(function(resolve, reject) {
-          this._queue.push({
-            method: "POST",
-            data: model,
-            resolve: resolve,
-            fail: reject
-          });
-          this.data.push(model);
-          this.processQueue();
-        }.bind(this));
+        if (! this.data) {
+          this.data = [];
+        }
+        this.data.push(model);
+        return this.addQueue({
+          method: "POST",
+          data: model
+        });
       },
 
       update: function(model) {
-        return new Promise(function(resolve, reject) {
-          this._queue.push({
-            method: "PUT",
-            // TODO: allow alternate id name
-            url: "" + model.id + "/",
-            data: model,
-            resolve: resolve,
-            fail: reject
-          });
-          this.processQueue();
-        }.bind(this));
+        return this.addQueue({
+          method: "PUT",
+          // TODO: allow alternate id name
+          url: "" + model.id + "/",
+          data: model
+        });
       },
 
       /** removes a model from the api */
       remove: function(model) {
-        return new Promise(function(resolve, reject) {
-          this._queue.push({
-            method: "DELETE",
-            // TODO: allow alternate id name
-            url: "" + model.id + "/",
-            data: model,
-            resolve: resolve,
-            fail: reject
-          });
-          this.data.splice(this.data.indexOf(model), 1);
-          this.processQueue();
-        }.bind(this));
+        this.data.splice(this.data.indexOf(model), 1);
+
+        return this.addQueue({
+          method: "DELETE",
+          // TODO: allow alternate id name
+          url: "" + model.id + "/",
+          data: model
+        });
       }
     })
   </script>
