--- a/use-rest-behavior.html
+++ b/use-rest-behavior.html
@@ -29,9 +29,9 @@
       }
       if (! retval) {
         // check global dom next
-        retval = document.querySelector(this.source) || document;
+        retval = document.querySelector(this.source);
       }
       return retval;
-    },
+    }
   }
 </script>
