--- a/rest-query.html
+++ b/rest-query.html
@@ -15,7 +15,11 @@ Polymer({
     data: {
       type: Array,
       notify: true
-    }
+    },
+    waitForToken: {
+      type: Boolean,
+      value: false
+    },
   },
   behaviors: [UseRest],
 
@@ -25,13 +29,33 @@ Polymer({
   attached: function() {
     this.rest = this.getDataSource();
     if (this.rest) {
-      this.data = this.rest.data;
-      this.rest.request();
+      var config = this.rest.getConfig();
+      if (this.rest.data) {
+        this.data = this.rest.data;
+      }
+
+      if (config.token || ! this.waitForToken) {
+        console.log("rest-query: waiting for data from rest", this.rest)
+        this.rest.request();
+      } else {
+        console.info("rest-query: not going to send request, waiting for token");
+      }
+
+      // listen for data update
       this.rest.addEventListener("data-changed", function() {
         console.log("rest-query: got data", this.rest.data.length);
         this.data = this.rest.data.slice();
+        console.log(this.data);
       }.bind(this));
-      console.log("rest-query: waiting for data from rest", this.rest)
+
+      // listen for token
+      config.addEventListener("token-changed", function() {
+        this.rest.request().then(function(e) {
+          console.log("request success", this.rest.data);
+        }.bind(this));
+        console.log("rest-query: got token", config.token);
+      }.bind(this));
+
     } else {
       console.error("rest-query: can't get rest element", this.source);
     }
